mailscripts (0.12-1) UNRELEASED; urgency=medium

  * email-print-mime-structure: make typesafe.
    Thanks to Daniel Kahn Gillmor for the patch.
  * email-print-mime-structure: add capability to decrypt message parts
    (Closes: #943959).
    Thanks to Daniel Kahn Gillmor for the patch series.
  * mailscripts.el: add mailscripts-extract-patches-branch-prefix defcustom.

 -- Sean Whitton <spwhitton@spwhitton.name>  Fri, 01 Nov 2019 20:38:07 -0700

mailscripts (0.11-1) unstable; urgency=medium

  * New script: email-print-mime-structure (Closes: #939993).
    Imported from the notmuch project, which never installed it.
    Thanks to Daniel Kahn Gillmor for the patches.
  * Generate nroff output in UTF-8.
    Thanks to Daniel Kahn Gillmor for the patch.
  * Use 'https' instead of 'http' in various places (Closes: #939994).
    Thanks to Daniel Kahn Gillmor for the patch.

 -- Sean Whitton <spwhitton@spwhitton.name>  Sun, 15 Sep 2019 08:13:41 -0700

mailscripts (0.10-1) unstable; urgency=medium

  * New script: email-extract-openpgp-certs(1) (Closes: #932993).
    Thanks to Daniel Kahn Gillmor for the patch.
  * Add CONTRIBUTING.rst.
  * d/copyright: completely new scripts may use any DFSG-compatible license.

 -- Sean Whitton <spwhitton@spwhitton.name>  Tue, 30 Jul 2019 13:25:36 +0100

mailscripts (0.9-1) unstable; urgency=medium

  * Fix docstring for notmuch-extract-thread-patches not to say that the
    target branch must not yet exist.

 -- Sean Whitton <spwhitton@spwhitton.name>  Sun, 14 Jul 2019 15:58:46 +0100

mailscripts (0.8-1) experimental; urgency=medium

  * New scripts: maildir-import-patch(1), notmuch-import-patch(1)
    - Add git to Recommends.
  * mbox2maildir: acquire a lock before touching the Maildir, and be sure
    to flush after copying messages.
    Per the docs for Python's mailbox module.

 -- Sean Whitton <spwhitton@spwhitton.name>  Fri, 03 May 2019 21:51:53 -0700

mailscripts (0.7-1) unstable; urgency=high
